methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:7: error: 'while' expected but 'if' found.
    if (getCouleurSol==Color.green){
    ^SlugTracking:14: error: '(' expected but ';' found.
    if (estSurBiscuit==true){
^